# marvelous-databricks-course-Garett601

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  databricks.yml  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
configs/: project_configs.yml
notebooks/: power_consumption-0.0.1-py3-none-any.whl  week_1.ipynb
notebooks/week1/: week_1.py
notebooks/week2/: 01_prepare_dataset.py  02_mlfow_experiment.py  03_log_and_register_model.py  04_log_and_register_custom_model.py  05_log_and_register_fe_model.py
notebooks/week3/: 01_feature_serving.py  02_model_serving.py  03_model_serving_feature_lookup.py  04_AB_test_model_serving.py
notebooks/week5/: 00_create_source_data.py  01_experiment_with_new_data.py  02_experiment_with_model_eval.py
power_consumption/: config.py  main.py  utils.py
power_consumption/jobs/: deploy_model.py  evaluate_model.py  preprocess.py  train_model.py
power_consumption/model/: __init__.py  main.py  rf_model.py
power_consumption/preprocessing/: __init__.py  data_preprocessor.py
power_consumption/schemas/: processed_data.py
resources/: mlops_course_job.yml
tests/: conftest.py  conftest.yml  test_utils.py
tests/model/: test_main.py  test_rf_model.py
tests/preprocessing/: test_data_preprocessor.py
