[project]
name = "power-consumption"
version = "0.0.1"
description = "MLOps with Databricks Course Project"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "lightgbm==4.5.0",
    "scikit-learn==1.5.2",
    "cloudpickle==3.1.0",
    "mlflow==2.17.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyarrow==14.0.1",
    "cffi==1.17.1",
    "scipy==1.14.1",
    "matplotlib==3.9.2",
    "databricks-feature-engineering==0.6",
    "loguru==0.7.2",
    "pandera==0.20.4",
    "pydantic==2.9.2",
    "databricks-sdk==0.32.0",
]

[project.optional-dependencies]
dev = [
    "databricks-connect>=15.4.1",
    "ipykernel>=6.29.5, <7",
    "pip>=24.2",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 120
lint.select = [
    "F", # pyflakes rules
    "E", # pycodestyle error rules
    "W", # pycodestyle warning rules
    "B", # flake8-bugbear rules
    "I", # isort rules
]
lint.ignore = [
    "E501", # line-too-long
]

target-version = "py311"
extend-exclude = ["tests/*", "notebooks/*"]

[tool.ruff.lint.isort]
known-first-party = ["power_consumption"]

[tool.ruff.format]
indent-style = "space"

[tool.setuptools]
packages = ["power_consumption"]

[tool.setuptools.package-data]
power_consumption = ["**/*.py"]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"
